# smart-documentation

./: README.md  knowledge_anchor.md  project_constitution.md  system_architecture.md  task_plan.md
.agents/rules/: rules.md
backend/: .env.example  .gitignore  Dockerfile  build.sh  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  base_agent.py  diagrammer_agent.py  parser_agent.py  scaffolder_agent.py
backend/app/application/: __init__.py  event_bus.py  generate_diagrams_usecase.py  orchestrator.py  parse_srs_usecase.py  scaffold_project_usecase.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  diagram.py  extracted_schema.py  project_scaffold.py  srs_document.py
backend/app/domain/ports/: __init__.py  diagram_port.py  file_parser_port.py  llm_port.py  scaffold_port.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/adapters/: __init__.py  file_parser_adapter.py  gemini_llm_adapter.py  mermaid_validator.py  zip_builder.py
backend/app/infrastructure/api/: __init__.py  dependencies.py
backend/app/infrastructure/api/routes/: analyze.py  diagrams.py  events.py  scaffold.py  upload.py
backend/app/infrastructure/api/schemas/: __init__.py  api_schemas.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentLogs.tsx  ExtractionPanel.tsx  InputPanel.tsx  MermaidDiagram.tsx  MermaidPanel.tsx
