[project]
name = "smart-documentation-architect"
version = "0.1.0"
description = "Transform SRS documents into structured architectures, Mermaid diagrams, and deployable boilerplate."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.0.0",
    "google-genai>=1.0.0",
    "pymupdf>=1.25.0",
    "markdown-it-py>=3.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
